@@ -5,6 +5,7 @@ python-fll (0.9.13) UNRELEASED; urgency=medium
     - allow setting of hostname
     - add password in distro to set password and addusers or autologin
     - force cdebootstrap to systemd-sysv and include core packages
+    - add fscomp code to actually mksquashfs
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:45 +0200
 
